--- a/site/views/components/base.pug
+++ b/site/views/components/base.pug
@@ -9,7 +9,7 @@ block contents
             .section-title
                 h1= title
                 .section-desc 
-                    p Core design foundations like font sizes, spacing, and border radius.
+                    p Core design foundations like font sizes, spacing, weight and Heading System.
             .section-contents
                 h4 Typography
                 .ga-card
