--- a/src/definitions/components/checkbox.scss
+++ b/src/definitions/components/checkbox.scss
@@ -29,7 +29,7 @@
       left: 0;
       display: block;
       border: 1px solid var(--brd);
-      background-color: var(--suf);
+      background-color: var(--bgc);
       border-radius: 2px;
       transform: translateY(-50%);
     }
