--- a/src/definitions_beui/components/card.scss
+++ b/src/definitions_beui/components/card.scss
@@ -1,4 +1,4 @@
-@use '../../theme.scss' as *;
+@use '../../theme.beui.scss' as *;
 
 $cardBackgroundColor: var(--depth-bg);
 $cardBoxShadow: var(--depth-bs);
