--- a/src/definitions_beui/components/rate.scss
+++ b/src/definitions_beui/components/rate.scss
@@ -1,6 +1,6 @@
 @use 'sass:color';
 @use 'sass:list';
-@use '../../theme.scss' as *;
+@use '../../theme.beui.scss' as *;
 
 .be-rate {
   font-size: inherit;
