--- a/src/definitions_beui/components/selectBox.scss
+++ b/src/definitions_beui/components/selectBox.scss
@@ -1,4 +1,4 @@
-@use '../../theme.scss' as *;
+@use '../../theme.beui.scss' as *;
 $itemHeight: 37px;
 $selectBoxVerticalPadding: $verticalInputPadding;
 $selectBoxCompactVerticalPadding: $compactVerticalPadding;
