--- a/src/definitions_beui/components/tabs.scss
+++ b/src/definitions_beui/components/tabs.scss
@@ -1,4 +1,4 @@
-@use '../../theme.scss' as *;
+@use '../../theme.beui.scss' as *;
 $tabItemGap: 10px;
 $tabsLineColor: #ebebeb;
 $tabLineWidth: 2px;
