--- a/src/definitions_beui/components/button.scss
+++ b/src/definitions_beui/components/button.scss
@@ -1,6 +1,6 @@
 @use 'sass:color';
 @use 'sass:list';
-@use '../../theme.scss' as *;
+@use '../../theme.beui.scss' as *;
 //Colors
 $baseButtonColor: var(--txt);
 $baseButtonBg: var(--base-color);
