--- a/src/definitions_beui/components/input.scss
+++ b/src/definitions_beui/components/input.scss
@@ -1,6 +1,6 @@
 @use 'sass:list';
 @use 'sass:map';
-@use '../../theme.scss' as *;
+@use '../../theme.beui.scss' as *;
 
 :root.light-mode {
   --input-brd-hover: #{map.get($grays, 'gray-20')};
