--- a/src/definitions_beui/components/message.scss
+++ b/src/definitions_beui/components/message.scss
@@ -1,6 +1,6 @@
 @use 'sass:color';
 @use 'sass:list';
-@use '../../theme.scss' as *;
+@use '../../theme.beui.scss' as *;
 
 .be-message {
   padding: 15px 20px;
