--- a/src/definitions_beui/components/panel.scss
+++ b/src/definitions_beui/components/panel.scss
@@ -1,4 +1,4 @@
-@use '../../theme.scss' as *;
+@use '../../theme.beui.scss' as *;
 $panelBackgroundColor: #efefef;
 $panelBorderColor: var(--brd);
 $panelFontColor: var(--txt);
