--- a/src/definitions_beui/components/segment.scss
+++ b/src/definitions_beui/components/segment.scss
@@ -1,4 +1,4 @@
-@use '../../theme.scss' as *;
+@use '../../theme.beui.scss' as *;
 $segmentBgColor: var(--depth-bg);
 $segmentBoxShadow: var(--depth-bs);
 $segmentHorizontalPadding: 16px;
