add vercel analytics

--- a/site/views/layout.pug
+++ b/site/views/layout.pug
@@ -49,3 +49,6 @@ html
         block js-module
         
         script(src="/js/base.js")
+        scropt.
+            window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+        script(defer, src="/_vercel/insights/script.js")
