update style & add be-ui link

--- a/site/views/components/modal.pug
+++ b/site/views/components/modal.pug
@@ -24,7 +24,7 @@ block contents
                                     div.contents 모달 내용
                                 .modal-footer
                                     button.ga-button.primary 확인
-                                    button.ga-button.secondary.outline 취소
+                                    button.ga-button.text 취소
             .section-contents
                 h4.contents-title 실행
                 .ga-card
@@ -41,6 +41,6 @@ block contents
                                         div.contents 모달 내용
                                     .modal-footer
                                         button.ga-button.primary 확인
-                                        button.ga-button.secondary.outline 취소
+                                        button.ga-button.text.cancel 취소
 block module 
     script(src="/js/modal.js")
