--- a/src/definitions/components/button.scss
+++ b/src/definitions/components/button.scss
@@ -133,6 +133,12 @@
             margin: 0 0 0 $buttonIconDistance;
         }
     }
+    a.link {
+        position: absolute;
+        inset: 0;
+        width: 100%;
+        height: 100%;
+    }
     &.badge {
         display: inline-flex;
         align-items: center;
@@ -178,6 +184,7 @@
             margin-right: 5px;
         }
     }
+
 }
 
 .ga-button {
