--- a/src/definitions/components/toast.scss
+++ b/src/definitions/components/toast.scss
@@ -63,7 +63,8 @@
     //opacity: .95;
     border-radius: $baseBorderRadius;
     box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.16);
-    background-color: #fff;
+    background-color: var(--suf);
+    color: var(--txt);
     //transition: all 500ms;
     transition-property: opacity, transform;
     transition-duration: 500ms, 1000ms;
