create main banner section

--- a/site/views/components/base.pug
+++ b/site/views/components/base.pug
@@ -14,10 +14,10 @@ block contents
                 h4 Typography
                 .ga-card
                     .contents
-                        .ga-tag.label.secondary
+                        .ga-tag.label.primary
                             i.icon.left.xi-at
-                            | fontfamily
-                        | Pretendard Variable(CDN)
+                            | Font Family
+                        span.bold.large  Pretendard Variable(CDN)
                         .contents-wrapper.pretendard
                             .ga-grid
                                 .column.span-3.span-xs-12.mainWord AaBb
@@ -42,7 +42,7 @@ block contents
                                     tr 
                                         td Light 
                                         td 300 
-                                        td Frontend Renders On Grid. 
+                                        td.light Frontend Renders On Grid. 
                                     tr 
                                         td Regular 
                                         td 400 
@@ -50,7 +50,11 @@ block contents
                                     tr 
                                         td Bold 
                                         td 600 
-                                        td Frontend Renders On Grid. 
+                                        td.bold Frontend Renders On Grid. 
+                                    tr 
+                                        td Bolder 
+                                        td 900 
+                                        td.bolder Frontend Renders On Grid. 
 
             .section-contents
                 h4 Letter Spacing
@@ -69,12 +73,12 @@ block contents
                                         td Wider 
                                         td 1 
                                         td spacing-wider 
-                                        td Frontend Renders On Grid. 
+                                        td.spacing-wider Frontend Renders On Grid. 
                                     tr 
                                         td Wide 
                                         td 0.5 
                                         td spacing-wide 
-                                        td Frontend Renders On Grid. 
+                                        td.spacing-wide Frontend Renders On Grid. 
                                     tr 
                                         td Normal 
                                         td 0 
@@ -84,12 +88,12 @@ block contents
                                         td Narrow 
                                         td -0.5 
                                         td spacing-narrow 
-                                        td Frontend Renders On Grid. 
+                                        td.spacing-narrow  Frontend Renders On Grid. 
                                     tr 
                                         td Narrower 
                                         td -1 
                                         td spacing-narrower 
-                                        td Frontend Renders On Grid. 
+                                        td.spacing-narrower Frontend Renders On Grid. 
             .section-contents
                 h4.header Heading
                 .ga-card
