--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 html, body {
   width: 100vw;
   height: 100vh;
@@ -27,6 +28,9 @@ header.gnb .toggle-menu {
   display: none;
 }
 
+header.gnb .logo {
+  font-family: Ubuntu;
+}
 header.gnb .logo span {
   display: inline-block;
   font-size: 2em;
@@ -40,6 +44,7 @@ header.gnb .logo .sub-logo {
 
 .main-menu, .sub-menu {
   display: flex;
+  align-items: center;
   gap: 10px;
 }
 
@@ -98,6 +103,26 @@ header.gnb .logo .sub-logo {
   transition: transform 250ms ease;
   transform: translateX(-100%);
   overflow-y: auto;
+}
+
+.main-banner {
+  text-align: center;
+  height: 450px;
+}
+.main-banner .title {
+  font-family: Ubuntu;
+  padding: 100px 20px 10px;
+  font-size: 3em;
+  font-weight: 800;
+}
+.main-banner .sub-title {
+  font-weight: 100;
+  font-size: 1.5em;
+  color: #999;
+  padding: 0 20px;
+}
+.main-banner .main-link {
+  padding: 20px 0;
 }
 
 .ui-list {
@@ -182,6 +207,7 @@ section .section-contents .contents-wrapper .contents-item {
   text-align: center;
   min-height: 40px;
   height: 100%;
+  background-color: var(--suf);
 }
 .summary .field {
   margin-bottom: 5px;
@@ -189,9 +215,11 @@ section .section-contents .contents-wrapper .contents-item {
 
 #typography .mainWord {
   font-size: 4em;
+  padding: 30px 0;
 }
 #typography .subWord {
   color: #ababab;
+  line-height: 1.5;
 }
 #typography .contents-wrapper p {
   letter-spacing: 5px;
@@ -238,9 +266,9 @@ section .section-contents .contents-wrapper .contents-item {
   width: 100%;
   height: 100%;
   text-align: center;
-  background-color: #f2f2f2;
+  background-color: var(--suf);
   display: block;
-  box-shadow: 0 0 0 1px #efefef inset;
+  box-shadow: 0 0 0 1px var(--brd) inset;
   min-height: 50px;
 }
 
@@ -320,6 +348,12 @@ section pre {
   }
   header.gnb .main-menu .toggle-menu {
     display: block;
+  }
+  header.gnb .link-btn {
+    position: absolute;
+    top: 60px;
+    right: 5px;
+    padding: 5px;
   }
   .main-container .left-part .side-menu {
     position: absolute;
