--- a/site/public/scss/style.scss
+++ b/site/public/scss/style.scss
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 $gnbHeight: 60px;
 html, body {
   width: 100vw;
@@ -28,6 +31,7 @@ header.gnb {
 }
 
 header.gnb .logo {
+  font-family: Ubuntu;
   span {
     display: inline-block;
     font-size: 2em;
@@ -41,6 +45,7 @@ header.gnb .logo {
 }
 .main-menu, .sub-menu {
   display: flex;
+  align-items: center;
   gap: 10px;
 }
 .pages .main-menu .toggle-menu {
@@ -94,6 +99,25 @@ header.gnb .logo {
   transition: transform 250ms ease;
   transform: translateX(-100%);
   overflow-y: auto;
+}
+.main-banner {
+  text-align: center;
+  height: 450px;
+  .title {
+    font-family: Ubuntu;
+    padding: 100px 20px 10px ;
+    font-size: 3em;
+    font-weight: 800;
+  }
+  .sub-title {
+    font-weight: 100;
+    font-size: 1.5em;
+    color: #999;
+    padding: 0 20px;
+  }
+  .main-link {
+    padding: 20px 0;
+  }
 }
 .ui-list {
   width: 100%;
@@ -178,6 +202,7 @@ section {
     text-align: center;
     min-height: 40px;
     height: 100%;
+    background-color: var(--suf);
   }
   .field {
     margin-bottom: 5px;
@@ -186,9 +211,11 @@ section {
 #typography {
   .mainWord {
     font-size: 4em;
+    padding: 30px 0;
   }
   .subWord {
-    color: #ababab
+    color: #ababab;
+    line-height: 1.5; 
   }
   .contents-wrapper {
     p {
@@ -242,9 +269,9 @@ section {
       width: 100%;
       height: 100%;
       text-align: center;
-      background-color: #f2f2f2;
+      background-color: var(--suf);
       display: block;
-      box-shadow: 0 0 0 1px #efefef inset;
+      box-shadow: 0 0 0 1px var(--brd) inset;
       min-height: 50px;
     }
   }
@@ -368,6 +395,13 @@ section pre {
       .toggle-menu {
         display: block;
       }
+    }
+    .link-btn {
+      // display: none;
+      position: absolute;
+      top: $gnbHeight;
+      right: 5px;
+      padding :5px;
     }
   }
   .main-container {
