--- a/site/views/index.pug
+++ b/site/views/index.pug
@@ -4,14 +4,27 @@ block title
     title Design System #{title}
 
 block contents
+    .main-banner.page-wrapper
+        .title FROG UI 
+        .sub-title 
+            | Building 
+            span.ga-blue-text consistent 
+            | and 
+            span.ga-green-text meaningful 
+            | UI with Semantic CSS  
+        .main-link
+            .ga-button 
+                | Components
+                i.icon.right.xi-arrow-right
+                a.link(href="/pages/base") 
     .page-wrapper.summary#typography
         section
             h5.header typography
             .ga-grid2.set-rows.align-center(style="--grid-row-num: 6")
                 .column.col-6.row-4.col-xs-12
                     .ga-grid
-                        .column.span-3.mainWord Aa
-                        .column.span-8.mainWord 가나다
+                        .column.span-6.mainWord ABab
+                        .column.span-6.mainWord 가나다
                         .column.span-12
                 .column.col-6.row-4.col-xs-12
                     h1.header [H1] Frog UI System (28px)
@@ -19,7 +32,7 @@ block contents
                     h3.header [H3] Frog UI System (18px)
                     h4.header [H4] Frog UI System (16px)
                     h5.header [H5] Frog UI System (14px)
-                .column.col-6.row-2.col-xs-12
+                .column.col-6.row-2.col-xs-12.subWord
                     p ABCDEFGHIJKLMNOPQRSTUVWXYZ
                     p abcdefghijklmnopqrstuvwxyz
                     p 1234567890 ,./(){}[]\|:;"'?
@@ -133,23 +146,23 @@ block contents
             .sub-title grid(grid)
             .ga-grid2.set-rows(style="--grid-row-num: 6; --grid-gap: 10px")
                 .column.col-4.row-4
-                    .gray-item.gray-15
+                    .gray-item
                 .column.col-8.row-2
-                    .gray-item.gray-15
+                    .gray-item
                 .column.col-4.row-2
-                    .gray-item.gray-15
+                    .gray-item
                 .column.col-4.row-2
-                    .gray-item.gray-15
+                    .gray-item
                 .column.col-3
-                    .gray-item.gray-15
+                    .gray-item
                 .column.col-3
-                    .gray-item.gray-15
+                    .gray-item
                 .column.col-3
-                    .gray-item.gray-15
+                    .gray-item
                 .column.col-3
-                    .gray-item.gray-15
+                    .gray-item
                 .column.col-12
-                    .gray-item.gray-15
+                    .gray-item
     .page-wrapper.summary
         section
             h5.header elements
