--- a/site/views/layout.pug
+++ b/site/views/layout.pug
@@ -5,6 +5,7 @@ html
         meta(name="viewport",
             content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
+        include seo_meta
         link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
         link(rel="icon", href="/favicon.ico", type="image/x-icon")
         block title
