--- a/site/views/seo_meta.pug
+++ b/site/views/seo_meta.pug
@@ -1,6 +1,7 @@
 meta(name="desctiption", 
 content="Frog-ui is a design system-based CSS/UI library that provides consistent design tokens and responsive UI components. Easily works with React, Vue, and Vanilla JS. Frog ui는 디자인시스템 기반의 CSS/UI 라이브러리로, 일관된 디자인 토큰과 반응형 UI 컴포넌트를 제공합니다. React, Vue, Vanilla JS 어디서든 쉽게 사용하세요.")
-meta(name="keywords", content="Frog ui, CSS library, design system, 디자인시스템, UI/UX, UI components, frontend, design tokens, dark mode, responsive UI, web accessibility, Tailwind alternative, Material UI alternative")
+meta(name="keywords", 
+content="Frog ui, CSS library, design system, 디자인시스템, UI/UX, UI components, frontend, design tokens, dark mode, responsive UI, web accessibility, Tailwind alternative, Material UI alternative")
 meta(name="author", content="noistommy@gmail.com")
 
 meta(property="og:title", content="Frog-ui-css - Design System Based CSS/UI Library")
