add be-ui:react link

--- a/site/views/layout.pug
+++ b/site/views/layout.pug
@@ -44,6 +44,7 @@ html
                         .ga-button.circle.badge.compact
                             | Be-UI 
                             .in-badge.ga-deepblue React
+                            a.link(href="https://react-be-ui.vercel.app/", target="_blank")
                         .ga-button.circle.badge.compact
                             | Be-UI 
                             .in-badge.ga-green vue
