--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -4,6 +4,10 @@ html, body {
   height: 100vh;
 }
 
+h1, h2, h3, h4 {
+  font-family: Ubuntu;
+}
+
 header.gnb {
   position: fixed;
   top: 0;
@@ -167,6 +171,7 @@ section .section-title h1 {
   margin-bottom: 14px;
 }
 section .section-title .section-desc p {
+  font-family: Ubuntu;
   font-weight: 300;
   color: #999;
   font-size: 1.2em;
