--- a/site/views/layout.pug
+++ b/site/views/layout.pug
@@ -29,10 +29,10 @@ html
                             i.xi-bars
                 .logo 
                     a(href="/")
-                        span FROG 
+                        span FROG UI
                     //- div.sub-logo Fix, Refactor, Optimize, Grow!!
                     //- div.sub-logo Frontend Renders On Grid...
-                    div.sub-logo For Real, Only Good!!
+                    //- div.sub-logo For Real, Only Good!!
                 nav.sub-menu.small
                     //- .home
                     //-     .ga-button.text Home
@@ -71,7 +71,14 @@ html
         script.
             window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
         script(defer, src="/_vercel/insights/script.js")
-        script(async, src="https://plausible.io/js/pa-PNF1ZKkVWIqCuHg5qB1bO.js")
+        script(defer, src="https://plausible.io/js/pa-PNF1ZKkVWIqCuHg5qB1bO.js")
         script.
-            window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
-            plausible.init()
+            window.plausible = window.plausible || function() { (plausible.q = plausible.q || []).push(arguments) };
+            plausible.init = plausible.init || function(i) { plausible.o = i || {} };
+            
+            // Plausible 스크립트가 로드된 후 초기화
+            document.addEventListener('DOMContentLoaded', function() {
+                if (typeof plausible !== 'undefined') {
+                    plausible.init();
+                }
+            });
