--- a/site/views/layout.pug
+++ b/site/views/layout.pug
@@ -20,6 +20,17 @@ html
         link(href="/prism/prism.css", rel="stylesheet")
         link(href="/frogui.css", rel="stylesheet")
         link(href="/css/style.css", rel="stylesheet")
+        script(async, src="https://plausible.io/js/pa-PNF1ZKkVWIqCuHg5qB1bO.js")
+        script.
+            window.plausible = window.plausible || function() { (plausible.q = plausible.q || []).push(arguments) };
+            plausible.init = plausible.init || function(i) { plausible.o = i || {} };
+            
+            // Plausible 스크립트가 로드된 후 초기화
+            document.addEventListener('DOMContentLoaded', function() {
+                if (typeof plausible !== 'undefined') {
+                    plausible.init();
+                }
+            });
     body
         .container.center
             header.gnb
@@ -71,14 +82,4 @@ html
         script.
             window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
         script(defer, src="/_vercel/insights/script.js")
-        script(defer, src="https://plausible.io/js/pa-PNF1ZKkVWIqCuHg5qB1bO.js")
-        script.
-            window.plausible = window.plausible || function() { (plausible.q = plausible.q || []).push(arguments) };
-            plausible.init = plausible.init || function(i) { plausible.o = i || {} };
-            
-            // Plausible 스크립트가 로드된 후 초기화
-            document.addEventListener('DOMContentLoaded', function() {
-                if (typeof plausible !== 'undefined') {
-                    plausible.init();
-                }
-            });
+       
